refactor: Wiki画像を翻訳セット識別子に紐づける
