# src/Wiki/Image/Application/UseCase/Query/DraftImageReadModel.php
@@ -11,7 +11,7 @@ readonly class DraftImageReadModel
         private ?string $publishedImageIdentifier,
         private string $url,
         private string $resourceType,
-        private string $wikiIdentifier,
+        private string $translationSetIdentifier,
         private string $imageUsage,
         private int $displayOrder,
         private string $sourceUrl,
@@ -32,7 +32,7 @@ readonly class DraftImageReadModel
             'publishedImageIdentifier' => $this->publishedImageIdentifier,
             'url' => $this->url,
             'resourceType' => $this->resourceType,
-            'wikiIdentifier' => $this->wikiIdentifier,
+            'translationSetIdentifier' => $this->translationSetIdentifier,
             'imageUsage' => $this->imageUsage,
             'displayOrder' => $this->displayOrder,
             'sourceUrl' => $this->sourceUrl,
