# src/Wiki/Image/Infrastructure/Factory/ImageSnapshotFactory.php
@@ -5,11 +5,11 @@ declare(strict_types=1);
 namespace Source\Wiki\Image\Infrastructure\Factory;
 
 use Source\Shared\Application\Service\Uuid\UuidGeneratorInterface;
+use Source\Shared\Domain\ValueObject\TranslationSetIdentifier;
 use Source\Wiki\Image\Domain\Entity\Image;
 use Source\Wiki\Image\Domain\Entity\ImageSnapshot;
 use Source\Wiki\Image\Domain\Factory\ImageSnapshotFactoryInterface;
 use Source\Wiki\Image\Domain\ValueObject\ImageSnapshotIdentifier;
-use Source\Wiki\Wiki\Domain\ValueObject\WikiIdentifier;
 
 readonly class ImageSnapshotFactory implements ImageSnapshotFactoryInterface
 {
@@ -20,12 +20,12 @@ readonly class ImageSnapshotFactory implements ImageSnapshotFactoryInterface
 
     public function create(
         Image          $image,
-        WikiIdentifier $wikiIdentifier,
+        TranslationSetIdentifier $translationSetIdentifier,
     ): ImageSnapshot {
         return new ImageSnapshot(
             new ImageSnapshotIdentifier($this->uuidGenerator->generate()),
             $image->imageIdentifier(),
-            $wikiIdentifier,
+            $translationSetIdentifier,
             $image->imagePath(),
             $image->imageUsage(),
             $image->displayOrder(),
